# src/handlers.rs
@@ -37,11 +37,19 @@ use tracing_opentelemetry::OpenTelemetrySpanExt;
                 identity_provider: IdentityProvider::Maskinporten,
                 target: "altinn:serviceowner/rolesandrights".to_string(),
                 resource: Some("http://resource.example/api".to_string()),
+                skip_cache: None,
             }))),
             ("Generate a token for Azure AD" = (value = json!(TokenRequest{
                 identity_provider: IdentityProvider::AzureAD,
                 target: "api://cluster.namespace.application/.default".to_string(),
                 resource: None,
+                skip_cache: None,
+            }))),
+            ("Force renewal of token for Azure AD" = (value = json!(TokenRequest{
+                identity_provider: IdentityProvider::AzureAD,
+                target: "api://cluster.namespace.application/.default".to_string(),
+                resource: None,
+                skip_cache: Some(true),
             }))),
         ),
     ),
@@ -61,11 +69,13 @@ use tracing_opentelemetry::OpenTelemetrySpanExt;
 )]
 #[instrument(skip_all, name = "Handle /api/v1/token", fields(cache_hit))]
 pub async fn token(State(state): State<HandlerState>, JsonOrForm(request): JsonOrForm<TokenRequest>) -> Result<impl IntoResponse, ApiError> {
-    if let Some(cached_response) = state.token_cache.get(&request).await {
-        tracing::Span::current().set_attribute("cache_hit", true);
-        crate::tracing::inc_cache_hits("/api/v1/token", state.cfg.downstream_app.clone());
-        return Ok(Json(cached_response));
-    };
+    if !request.skip_cache.unwrap_or_default() {
+        if let Some(cached_response) = state.token_cache.get(&request).await {
+            tracing::Span::current().set_attribute("cache_hit", true);
+            crate::tracing::inc_cache_hits("/api/v1/token", state.cfg.downstream_app.clone());
+            return Ok(Json(cached_response));
+        };
+    }
 
     for provider in state.providers {
         if !provider.read().await.should_handle_token_request(&request) {
@@ -95,11 +105,19 @@ pub async fn token(State(state): State<HandlerState>, JsonOrForm(request): JsonO
                 identity_provider: IdentityProvider::TokenX,
                 target: "cluster:namespace:application".to_string(),
                 user_token: "eyJraWQiOiJpZHBvcnRlbiIsInR5cCI6IkpXVCIsImFsZyI6IlJTMjU2In0.eyJzdWIiOiIxOTQyMmVhNC04ZWUwLTQ0YTYtOThjNi0zODc0MjAyN2YyYWQiLCJhdWQiOiJkZWZhdWx0IiwibmJmIjoxNzMwOTc4MzgwLCJhenAiOiJ5b2xvIiwiaXNzIjoiaHR0cDovL2xvY2FsaG9zdDo4MDgwL2lkcG9ydGVuIiwiZXhwIjoxNzMwOTgxOTgwLCJpYXQiOjE3MzA5NzgzODAsImp0aSI6IjBhMDU5MDc3LTQwNzEtNDdlYS04MmM2LTU2NTY2OTk3Nzg3MiIsInRpZCI6ImlkcG9ydGVuIn0.JwgvrhPMRMaNJngiR6hzHfhg5Qy-yV4zuAtxRRvdjX4g2cBmsWj305U-lHJGsozjFhpGpA0lAn16bD3l1Z6x7CsO6kbQEwKQiJE9gB61RwSUEjV4-RbpVrKMJwppQg8gPLrb4SbTjjkylD7B9CfPiIZYtCNr6d-J0lupYiB7IlK7anUImCv7RqXTuhH0aklVpVmxOZRhzHJ6_WfhWS54MysZmeRZwOsSO-ofkrcznFFaArS1ODfrYgHx4dgVBjkE7RTcLP7nuwNtvbLg9ZVvIAT4Xh-3fu0pCL9NXoDiqBsQ0SukBAlBFfWQBFu1-34-bXkfRz2RgCR964WbKUQ8gQ".to_string(),
+                skip_cache: None,
             }))),
             ("Exchange a token using Azure AD" = (value = json!(TokenExchangeRequest{
                 identity_provider: IdentityProvider::AzureAD,
                 target: "api://cluster.namespace.application/.default".to_string(),
                 user_token: "eyJraWQiOiJhenVyZWFkIiwidHlwIjoiSldUIiwiYWxnIjoiUlMyNTYifQ.eyJzdWIiOiI1ZDYzMDliNi05OGUzLTQ1ODAtYTQwNS02MDExYzhhNjExYzgiLCJhdWQiOiJkZWZhdWx0IiwibmJmIjoxNzMwOTc4MjQyLCJhenAiOiJ5b2xvIiwiaXNzIjoiaHR0cDovL2xvY2FsaG9zdDo4MDgwL2F6dXJlYWQiLCJleHAiOjE3MzA5ODE4NDIsImlhdCI6MTczMDk3ODI0MiwianRpIjoiZTU4ZGM2ZjctZjQ0NC00YzcxLThlNzAtNzRhNWY1MTRlZDAwIiwidGlkIjoiYXp1cmVhZCJ9.KhySKFTJVaE6tYhsxCZonYMXv4fKwjtOI4YIAIoOs3DwaXoynTvy2lgiHSfisq-jLTJFGf9eGNbvwc3jUtypclVpYy_8d3xbvuu6jrOA1zWYagZjYr1FNN1g8tlF0SXjtkK_Bg-eZusLnEEbrZK1KnQRWN0I5fXqS7-IVe07hKTOE1teg7of2nCjfJ-iOXhf1mkXqCoUfSbJuUX2PEUs0b9yXAh_J-5P75T6130KBfRw5T5gYI0Kab3u2vm6t-ihT2Kz0aMkUGv_39myDgiwP4TV2vt4PhUiwefPo7KD-4_dkHc7Q5xUv-DWgTLUfXL2lOWf2d0C5tVExLB86jq8hw".to_string(),
+                skip_cache: None,
+            }))),
+            ("Force renewal of token using Azure AD" = (value = json!(TokenExchangeRequest{
+                identity_provider: IdentityProvider::AzureAD,
+                target: "api://cluster.namespace.application/.default".to_string(),
+                user_token: "eyJraWQiOiJhenVyZWFkIiwidHlwIjoiSldUIiwiYWxnIjoiUlMyNTYifQ.eyJzdWIiOiI1ZDYzMDliNi05OGUzLTQ1ODAtYTQwNS02MDExYzhhNjExYzgiLCJhdWQiOiJkZWZhdWx0IiwibmJmIjoxNzMwOTc4MjQyLCJhenAiOiJ5b2xvIiwiaXNzIjoiaHR0cDovL2xvY2FsaG9zdDo4MDgwL2F6dXJlYWQiLCJleHAiOjE3MzA5ODE4NDIsImlhdCI6MTczMDk3ODI0MiwianRpIjoiZTU4ZGM2ZjctZjQ0NC00YzcxLThlNzAtNzRhNWY1MTRlZDAwIiwidGlkIjoiYXp1cmVhZCJ9.KhySKFTJVaE6tYhsxCZonYMXv4fKwjtOI4YIAIoOs3DwaXoynTvy2lgiHSfisq-jLTJFGf9eGNbvwc3jUtypclVpYy_8d3xbvuu6jrOA1zWYagZjYr1FNN1g8tlF0SXjtkK_Bg-eZusLnEEbrZK1KnQRWN0I5fXqS7-IVe07hKTOE1teg7of2nCjfJ-iOXhf1mkXqCoUfSbJuUX2PEUs0b9yXAh_J-5P75T6130KBfRw5T5gYI0Kab3u2vm6t-ihT2Kz0aMkUGv_39myDgiwP4TV2vt4PhUiwefPo7KD-4_dkHc7Q5xUv-DWgTLUfXL2lOWf2d0C5tVExLB86jq8hw".to_string(),
+                skip_cache: Some(true),
             }))),
         ),
     ),
@@ -118,11 +136,13 @@ pub async fn token(State(state): State<HandlerState>, JsonOrForm(request): JsonO
 )]
 #[instrument(skip_all, name = "Handle /api/v1/token/exchange", fields(cache_hit))]
 pub async fn token_exchange(State(state): State<HandlerState>, JsonOrForm(request): JsonOrForm<TokenExchangeRequest>) -> Result<impl IntoResponse, ApiError> {
-    if let Some(cached_response) = state.token_exchange_cache.get(&request).await {
-        tracing::Span::current().set_attribute("cache_hit", true);
-        crate::tracing::inc_cache_hits("/api/v1/token/exchange", state.cfg.downstream_app.clone());
-        return Ok(Json(cached_response));
-    };
+    if !request.skip_cache.unwrap_or_default() {
+        if let Some(cached_response) = state.token_exchange_cache.get(&request).await {
+            tracing::Span::current().set_attribute("cache_hit", true);
+            crate::tracing::inc_cache_hits("/api/v1/token/exchange", state.cfg.downstream_app.clone());
+            return Ok(Json(cached_response));
+        };
+    }
 
     for provider in state.providers {
         if !provider.read().await.should_handle_token_exchange_request(&request) {
